build5.log
=== Build Output ===
> D:\Program Files\Huawei\DevEco Studio\tools\node\node.exe D:\Program Files\Huawei\DevEco Studio\tools\hvigor\bin\hvigorw.js --mode project -p product=default assembleApp -p buildMode=debug -p debuggable=true -p debugLine=false --no-daemon

> hvigor Finished ::PreBuildApp... after 2 ms 
> hvigor UP-TO-DATE :entry:default@PreBuild...  
> hvigor Finished ::DuplicateDependencyCheck... after 1 ms 
> hvigor Finished :entry:default@CreateModuleInfo... after 2 ms 
> hvigor UP-TO-DATE :entry:default@GenerateMetadata...  
> hvigor Finished :entry:default@ConfigureCmake... after 167 ms 
> hvigor UP-TO-DATE :entry:default@MergeProfile...  
> hvigor UP-TO-DATE :entry:default@CreateBuildProfile...  
> hvigor Finished :entry:default@PreCheckSyscap... after 1 ms 
> hvigor Finished :entry:default@ProcessIntegratedHsp... after 2 ms 
> hvigor Finished :entry:default@BuildNativeWithCmake... after 222 ms 
> hvigor UP-TO-DATE :entry:default@MakePackInfo...  
> hvigor Finished :entry:default@SyscapTransform... after 25 ms 
> hvigor UP-TO-DATE :entry:default@GeneratePkgContextInfo...  
> hvigor UP-TO-DATE :entry:default@ProcessProfile...  
> hvigor UP-TO-DATE :entry:default@ProcessRouterMap...  
> hvigor UP-TO-DATE :entry:default@ProcessShareConfig...  
> hvigor Finished :entry:default@ProcessStartupConfig... after 36 ms 
> hvigor UP-TO-DATE :entry:default@ProcessResource...  
> hvigor UP-TO-DATE :entry:default@GenerateLoaderJson...  
> hvigor UP-TO-DATE :entry:default@CompileResource...  
> hvigor UP-TO-DATE :entry:default@CompileArkTS...  
> hvigor Finished :entry:default@BuildJS... after 94 ms 
> hvigor ERROR: Failed :entry:default@BuildNativeWithNinja... 
> hvigor ERROR: Exceptions happened while executing D:\Program Files\Huawei\DevEco Studio\sdk\default\openharmony\native\build-tools\cmake\bin\ninja.exe -C D:\tmp\mrpohos\entry\.cxx\default\default\debug\x86_64.
ninja: Entering directory `D:\tmp\mrpohos\entry\.cxx\default\default\debug\x86_64'
[1/2] Building CXX object CMakeFiles/entry.dir/napi_init.cpp.o
FAILED: CMakeFiles/entry.dir/napi_init.cpp.o 
D:\PROGRA~1\Huawei\DEVECO~1\sdk\default\hms\native\BiSheng\bin\CLANG_~1.EXE --target=x86_64-linux-ohos --gcc-toolchain="D:/Program Files/Huawei/DevEco Studio/sdk/default/hms/native/BiSheng" --sysroot="D:/Program Files/Huawei/DevEco Studio/sdk/default/openharmony/native/sysroot" -DUNICORN_HAS_ARM -DVMRP -D__HARMONYOS__ -Dentry_EXPORTS -I"D:/Program Files/Huawei/DevEco Studio/sdk/default/hms/native/sysroot/usr/include" -ID:/tmp/mrpohos/entry/src/main/cpp -ID:/tmp/mrpohos/entry/src/main/cpp/include -ID:/tmp/mrpohos/entry/src/main/cpp/vmrp -ID:/tmp/mrpohos/entry/src/main/cpp/vmrp/header -ID:/tmp/mrpohos/entry/src/main/cpp/unicorn/include -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -fno-addrsig -Wa,--noexecstack -Wformat -Werror=format-security   -D__MUSL__ -O0 -g -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/entry.dir/napi_init.cpp.o -MF CMakeFiles\entry.dir\napi_init.cpp.o.d -o CMakeFiles/entry.dir/napi_init.cpp.o -c D:/tmp/mrpohos/entry/src/main/cpp/napi_init.cpp
clang++: warning: argument unused during compilation: '--gcc-toolchain=D:/Program Files/Huawei/DevEco Studio/sdk/default/hms/native/BiSheng' [-Wunused-command-line-argument]
D:/tmp/mrpohos/entry/src/main/cpp/napi_init.cpp:221:118: error: use of undeclared identifier 'uc'
    OH_LOG_INFO(LOG_APP, "NapiStart: filename='%{public}s', extName='%{public}s', uc=%{public}p", filename, extName, uc);
                                                                                                                     ^

1 error generated.

ninja: build stopped: subcommand failed.
undefined

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --debug option to get more log output.

> hvigor ERROR: BUILD FAILED in 40 s 406 ms 
> hvigor ERROR: Failed :entry:default@BuildNativeWithNinja... 
> hvigor ERROR: Exceptions happened while executing D:\Program Files\Huawei\DevEco Studio\sdk\default\openharmony\native\build-tools\cmake\bin\ninja.exe -C D:\tmp\mrpohos\entry\.cxx\default\default\debug\arm64-v8a.
ninja: Entering directory `D:\tmp\mrpohos\entry\.cxx\default\default\debug\arm64-v8a'
[1/2] Building CXX object CMakeFiles/entry.dir/napi_init.cpp.o
FAILED: CMakeFiles/entry.dir/napi_init.cpp.o 
D:\PROGRA~1\Huawei\DEVECO~1\sdk\default\hms\native\BiSheng\bin\CLANG_~1.EXE --target=aarch64-linux-ohos --gcc-toolchain="D:/Program Files/Huawei/DevEco Studio/sdk/default/hms/native/BiSheng" --sysroot="D:/Program Files/Huawei/DevEco Studio/sdk/default/openharmony/native/sysroot" -DUNICORN_HAS_ARM -DVMRP -D__HARMONYOS__ -Dentry_EXPORTS -I"D:/Program Files/Huawei/DevEco Studio/sdk/default/hms/native/sysroot/usr/include" -ID:/tmp/mrpohos/entry/src/main/cpp -ID:/tmp/mrpohos/entry/src/main/cpp/include -ID:/tmp/mrpohos/entry/src/main/cpp/vmrp -ID:/tmp/mrpohos/entry/src/main/cpp/vmrp/header -ID:/tmp/mrpohos/entry/src/main/cpp/unicorn/include -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -fno-addrsig -Wa,--noexecstack -Wformat -Werror=format-security   -D__MUSL__ -O0 -g -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/entry.dir/napi_init.cpp.o -MF CMakeFiles\entry.dir\napi_init.cpp.o.d -o CMakeFiles/entry.dir/napi_init.cpp.o -c D:/tmp/mrpohos/entry/src/main/cpp/napi_init.cpp
clang++: warning: argument unused during compilation: '--gcc-toolchain=D:/Program Files/Huawei/DevEco Studio/sdk/default/hms/native/BiSheng' [-Wunused-command-line-argument]
D:/tmp/mrpohos/entry/src/main/cpp/napi_init.cpp:221:118: error: use of undeclared identifier 'uc'
    OH_LOG_INFO(LOG_APP, "NapiStart: filename='%{public}s', extName='%{public}s', uc=%{public}p", filename, extName, uc);
                                                                                                                     ^

1 error generated.

ninja: build stopped: subcommand failed.
undefined

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --debug option to get more log output.



Process finished with exit code -1

